Fixing Half-Elf Orkira Skin Portrait.
It was too big for its boots.

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -159,6 +159,9 @@ code{
 }
 .skinTableIcon img {
 	margin: 5px;
+	width: 85px;
+	height: 80px;
+	object-fit: contain;
 }
 .skinTableSource {
 	display: flex;
